<resources>
    <string name="app_name">Products</string>
    <string name="hint_password">Password</string>
    <string name="text_sign_in">Sign in</string>
    <string name="text_log_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="msg_invalid_username">Not a valid username</string>
    <string name="msg_invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hint_login">Login</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="skip">Skip</string>
    <string name="save">Save</string>
    <string name="text_sign_in_later">Skip</string>
</resources>
